# humpback-acoustic-embed

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Clustering.md  DECISIONS.md  LICENSE  MEMORY.md  Makefile  PLANS.md  Procfile.dev  README.md  STATUS.md  alembic.ini  pyproject.toml  supervisord.conf
.agents/workflows/: debug.md  handoff.md  implement.md  review.md  start.md  transition.md
.claude/: settings.json
.claude/commands/: review.md  session-begin.md  session-debug.md  session-end.md  session-implement.md  session-plan.md  session-review.md  session-start.md  session-transition.md  start.md  transition.md
.claude/hooks/: ruff-format.sh
.claude/plans/: 2026-03-10-snapped-canonical-detection-ranges.md
.skills/session-debug/: SKILL.md
.skills/session-end/: SKILL.md
.skills/session-implement/: SKILL.md
.skills/session-review/: SKILL.md
.skills/session-start/: SKILL.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_folder_path.py  003_add_model_type_and_input_format.py  004_add_warning_message_to_processing_jobs.py  005_checksum_folder_unique.py  006_add_refined_from_job_id.py  007_negative_embedding_set_ids.py  008_add_extraction_columns.py  009_add_source_folder.py  010_detection_hysteresis.py  011_detection_progress_columns.py  012_hydrophone_detection_columns.py  013_hydrophone_local_cache.py  014_retrain_workflows.py  015_has_humpback_labels.py  016_rename_has_positive_labels.py  017_output_row_store_path.py  018_detection_mode.py  019_search_jobs.py  020_label_processing_jobs.py  021_label_processing_workflow.py  022_vocalization_labels.py  023_label_classifier.py  024_labeling_annotations.py  025_normalize_sanctsound_source_ids.py  025_timeline_tiles_ready.py  026_timeline_tiles_ready.py  027_drop_output_tsv_path.py  028_canonical_utc_detection_identity.py  029_drop_labeling_annotations.py  030_vocalization_tables.py  031_detection_embedding_jobs.py  032_training_datasets.py  033_detection_vocalization_consistency.py  034_detection_embedding_job_sync_columns.py  035_stable_row_id.py  036_autoresearch_candidates.py  037_classifier_training_candidate_provenance.py  038_window_selection_columns.py  039_max_logit_drop_column.py  (+40 more)
docs/: backlog.md
docs/agent-context/: README.md  current-state.md  domain-map.md  global-invariants.md  test-map.md
docs/mockups/: hmm-sequence-timeline-bugs.html
docs/plans/: 2026-03-24-superpowers-workflow-adoption.md  (+158 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: README.md  backfill_detection_metadata.py  backfill_training_summary.py  benchmark_region_detection.py  bootstrap_classifier.py  bootstrap_event_classifier_dataset.py  bootstrap_segmentation_dataset.py  cleanup_legacy_workflows.py  cleanup_sequence_model_artifacts.py  cleanup_short_negatives.py  convert_audio_to_flac.py  deploy.sh  export_timeline.py  fix_duplicate_labels.py  masked_transformer_nn_report.py  masked_transformer_retrieval_sweep.py  migrate_row_ids.py  migrate_sequence_model_timestamps.py  noaa_detection_metadata.py  noaa_gcs_poc.py  recover_event_boundary_corrections.py  recover_vocalization_corrections.py  reorder_vocalization_layout.py  repair_hydrophone_extract_lengths.py  sb_diagnostic.py  stage_s3_epoch_cache.py  validate_gap_filling.py
tests/: conftest.py  test_clustering_service.py  test_search_service.py
tools/: piano_roll_notes_debug.py  piano_roll_notes_registry.py
(+1046 files in other folders)
