[project]
name = "humpback-acoustic-embed"
version = "0.1.0"
description = "Humpback whale acoustic embedding and clustering platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.18",
    "pyarrow>=18.0",
    "numpy>=1.26",
    "librosa>=0.10",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "joblib>=1.5.3",
    "boto3>=1.42.63",
    "matplotlib>=3.8",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
tf-macos = [
    "tensorflow-macos>=2.16,<2.17; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorflow-metal>=1.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

tf-linux-cpu = [
    "tensorflow>=2.20,<2.21; sys_platform == 'linux'",
]

tf-linux-gpu = [
    "tensorflow[and-cuda]>=2.20,<2.21; sys_platform == 'linux'",
]

[project.scripts]
humpback-api = "humpback.api.app:main"
humpback-worker = "humpback.workers.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humpback"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatchling]

[tool.uv]
conflicts = [
    [
        { extra = "tf-macos" },
        { extra = "tf-linux-cpu" },
    ],
    [
        { extra = "tf-macos" },
        { extra = "tf-linux-gpu" },
    ],
    [
        { extra = "tf-linux-cpu" },
        { extra = "tf-linux-gpu" },
    ],
]

[dependency-groups]
dev = [
    "google-cloud-storage>=3.9.0",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "pytest-watch>=4.2",
    "ruff>=0.15.5",
]
